Fixed layout issues

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -13,6 +13,12 @@ body
   padding-top: 60px
   padding-bottom: 20px
   margin: 10px
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
+  font-weight: 300
+  font-size: 16px
+
+strong
+  font-weight: 500
 
 img
   max-width: 100%
